initial dependencies for fonts and icons added

--- a/index.html
+++ b/index.html
@@ -2,8 +2,16 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title> Evento </title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <title> Evento -- Events anywhere </title>
+
+        <link rel="shortcut icon" href="/static/event.png" type="image/x-icon">
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
+        
+        <!-- Link to sytlesheets-->
         <link rel="stylesheet" href="styles.css">
+
     </head>
     <body>
         <h1>Hello World!</h1>
