--- a/index.html
+++ b/index.html
@@ -14,7 +14,36 @@
 
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <header class="header">
+            <p class="logo">Evento</p>
+            <ul class="links">
+                <li class="link-item">
+                    <a class="link" href="/concerts">Concerts</a>
+                </li>
+
+                <li class="link-item">
+                    <a class="link" href="/sports">Sports</a>
+                </li>
+
+                <li class="link-item">
+                    <a class="link" href="/conference">Conferences</a>
+                </li>
+            </ul>
+
+        </header>
+
+        <main class="main">
+            <h1 class="heading">Find and book events anywhere</h1>
+            <p class="text">Search through hundreds of events to find your next one. Get your tickets safely through <span class="text-header">Evento</span>.</p>
+            <form class="form">
+                <input class="input-text" type="text" placeholder="Find events by city(e.g. Austin)">
+                <input class="input-button" type="submit" value="SEARCH">
+            </form>
+        </main>
+
+        <footer class="footer">
+
+        </footer>
     </body>
 
 </html>
