--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         </main>
 
         <footer class="footer">
-
+            <p class="copyright">&copy; 2024. Copyright by Evento.</p>
+            <p class="stats"> 13,330 events. 340 cities.</p>
         </footer>
     </body>
 
